--- a/css/styles.css
+++ b/css/styles.css
@@ -386,12 +386,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
-
-
-
-
-
-
 .main_title_box {
     background: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1-2.jpg);
@@ -873,10 +867,57 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             margin-left: 16px;
           }
 
-
-
-
-
+          @media screen and (min-width: 768px) {
+            .footer .container {
+              flex-direction: row;
+              flex-wrap: wrap;
+              align-items: start;
+              column-gap: 24px;
+              padding: 0 108px;
+            }
+          
+            .social_media {
+              align-items: flex-start;
+              margin: 0;
+            }
+          
+            .footer_logo_text{
+              max-width: 264px;
+              align-items: flex-start;
+            }
+          
+            .footer-form-container {
+              align-items: flex-start;
+            }
+          
+            .footer-form {
+              flex-direction: row;
+              gap: 24px;
+            }
+          
+            .footer-input-subscribe{
+              width: 264px;
+            }
+          }
+          @media screen and (min-width: 1158px) {
+            .footer {
+              padding: 100px 0 100px;
+            }
+          
+            .footer .container {
+              flex-wrap: nowrap;
+              padding: 0 16px;
+              gap: 0;
+            }
+            .footer_logo_text{
+              margin-right: 120px;
+            }
+          
+            .social_media{
+              margin-right: 80px;
+            }
+          }
+/* #endregion footer */
 /* #region Modal window contact form */
 .modal-overlay {
     position: fixed;
@@ -1042,14 +1083,19 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: none; 
     fill: #F4F4FD;
     }
-
+    .contact-form-label:last-child {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0;
+    }
     .span-checkbox {
         width: 16px;
         height: 16px;
         border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 2px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        display: inline-flex;
+        display: flex;
+        flex-shrink: 0;
         align-items: center;
         justify-content: center;
         fill: transparent;
