--- a/css/styles.css
+++ b/css/styles.css
@@ -382,13 +382,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 /* #region Hero */
 
-
-
-
-
 .main_title_box {
     background: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1-2.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-mob-min.jpg);
     background-repeat: no-repeat;
     background-position: center;  
     background-size: cover;
@@ -396,6 +392,33 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 0;
     margin: auto;
     }
+    @media screen and (min-resolution: 192dpi) {
+      .main_title_box {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/hero-mob@2x-min.jpg");
+      }
+    }
+    
+    @media screen and (min-width: 768px) {
+      .main_title_box {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/hero-tab-min.jpg");
+      }
+    }
+    @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+      .main_title_box {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/hero-tab@2x-min.jpg");
+      }
+    }
+@media screen and (min-width: 1024px) {
+  .main_title_box {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/hero-desk-min.jpg");
+  }
+}
+
+@media screen and (min-width: 1024px) and (min-resolution: 192dpi) {
+  .main_title_box {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/hero-desk@2x-min.jpg");
+  }
+}
     .main_title {
     font-weight: 700;
     font-size: 36px;
