--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,10 @@ button {
             transition-property: color;
             transition-duration: 250ms;
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
           }
           .contact_list {
             display: flex;
